@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>002</version>
+  <version>001</version>
 </metadata>
