@@ -5,6 +5,9 @@ Changelog
 2.1 - unreleased
 ------------------
 
+- Added encodeIdentityURL / decodeIdentityURL utility functions.
+  [davidblewett]
+
 - Various BBB bits moved to an upgrade step.
   [davidblewett]
 
